style(fix): Delete blue highlights on btns on mobile version

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: transparent;
+}
 a {
   text-decoration: none;
 }
